--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -219,7 +219,7 @@ code {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
-  gap: 3px;
+  /* gap: 3px; */
   width: 100%;
   height: 100%;
   position: absolute;
@@ -288,7 +288,7 @@ code {
   pointer-events: none;
 }
 
-.grid-lines {
+/* .grid-lines {
   position: absolute;
   top: 0;
   left: 0;
@@ -299,4 +299,4 @@ code {
   background-size: var(--grid-size) var(--grid-size);
   background-position: center center;
   pointer-events: none;
-}
+} */
